# faceshapex

./: .gitignore  pyproject.toml  test_api.py  test_db_connection.py  test_gradio_interface.py
faceshapex/: face_shape_detector.py  main.py  pyproject.toml
